# DyngineRust

./: .gitattributes  Cargo.toml
core/: Cargo.toml
core/cres/assets/: bd1.glb
core/cres/shaders/: shader.frag.wgsl
core/scenelib/: Cargo.toml
core/scenelib/src/: camera.rs  ecs.rs  lib.rs  scene.rs
core/src/: engine.rs  input.rs  lib.rs  scene.rs
editor/: Cargo.toml  README.MD
editor/cres/i18n/: en_US.ftl
editor/src/: gui.rs  i18n.rs  main.rs
math/: Cargo.toml
math/src/: lib.rs
newton/: Cargo.toml
newton/src/: lib.rs
newton/testing/: Cargo.toml
newton/testing/src/: main.rs
runtime/: Cargo.toml
runtime/src/: main.rs
src/: main.rs
