[package]
name = "dyngine_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.12"
profiling = "1.0.5"
glam = "0.20.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
scenelib = { path = "./scenelib" }

[features]
profile-with-optick = ["profiling/profile-with-optick"]