[package]
name = "editor"
version = "0.1.0"
edition = "2021"

# WGPU requires cargo resolver v2
resolver = "2"

[dependencies]
dyngine_core = { path = "../core" }
egui = "0.16"
epi = "0.16"
winit = "0.26"
egui_winit_platform = "0.13"
wgpu = "0.12"
egui_wgpu_backend = "0.16"
pollster = "0.2"
fluent = "0.16.0"
unic-langid = "0.9.0"
profiling = "1.0.5"

[features]
profile-with-optick = ["profiling/profile-with-optick"]