[package]
name = "scenelib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.20.2"
profiling = "1.0.5"
wgpu = "0.12"
bytemuck = { version = "1.4", features = [ "derive" ] }

[features]
profile-with-optick = ["profiling/profile-with-optick"]