[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = "0.32"
glam = "0.20.2"
rapier3d = { version = "0.11.1", features = ["simd-stable", "parallel"] }
newton = { path = "../" }